# propagators

./: .gitignore  .travis.yml  CHANGELOG.markdown  Data-Propagator-Cell.html  Data-Propagator-Class.html  Data-Propagator-Num.html  Data-Propagator-Prop.html  Data-Propagator-Unsafe.html  Data-Propagator.html  Prop.hs  README.markdown  Setup.lhs  doc-index.html  index-frames.html  index.html  mini_Data-Propagator-Cell.html  mini_Data-Propagator-Class.html  mini_Data-Propagator-Num.html  mini_Data-Propagator-Prop.html  mini_Data-Propagator-Unsafe.html  mini_Data-Propagator.html  models.cabal  propagators.cabal  propagators.haddock  stack.yaml
.github/workflows/: haskell-ci.yml
Model/: Counted.hs  Deque.hs
cbits/: holes.cmm
scripts/: travis_long
src/: Data-Propagator-Cell.html  Data-Propagator-Class.html  Data-Propagator-Num.html  Data-Propagator-Prop.html  Data-Propagator-Unsafe.html  Data-Propagator.html
src/Data/: Propagator.hs
src/Data/Propagator/: Cell.hs  Class.hs  Internal.hs  Name.hs  Num.hs  PProp.hs  Prop.hs  Supported.hs  Thunk.hs  Unsafe.hs
src/Data/Propagator/Prop/: Internal.hs
src/Model/: Array.hs  Backoff.hs  Deque.hs  Exception.hs  IVar.hs  Log.hs  Network.hs  Observer.hs  Par.hs  PrimRef.hs  Subscription.hs  Task.hs
src/Model/Internal/: Array.hs  Backoff.hs  Counted.hs  Deque.hs  Fiber.hs  For.hs  Hole.hs  Log.hs  PrimRef.hs  Task.hs  Util.hs  Weak.hs
src/Model/Par/: IVar.hs  Observer.hs  Subscription.hs
src/Model/Par/Internal/: Deque.hs  Fiber.hs
src/Model/Simple/: IVar.hs
tests/: Tests.hs  hlint.hs
tests/Data/Propagator/: Tests.hs
