name:          propagators
category:      Data
version:       0
license:       BSD3
cabal-version: >= 1.22
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     experimental
homepage:      http://github.com/ekmett/propagators/
bug-reports:   http://github.com/ekmett/propagators/issues
copyright:     Copyright (C) 2015 Edward A. Kmett
build-type:    Custom
tested-with:   GHC == 7.10.3
synopsis:      The Art of the Propagator
description:   <http://web.mit.edu/~axch/www/art.pdf The Art of the Propagator>

extra-source-files:
  CHANGELOG.markdown
  README.markdown

source-repository head
  type: git
  location: git://github.com/ekmett/propagators.git

-- You can disable the doctests test suite with -f-test-doctests
flag test-doctests
  default: True
  manual: True

-- You can disable the hlint test suite with -f-test-hlint
flag test-hlint
  default: True
  manual: True

library
  build-depends:
    base >= 4.8 && < 5,
    data-reify >= 0.6 && < 7,
    ghc-prim,
    hashable >= 1.2 && < 1.3,
    intervals >= 0.7 && < 0.9,
    primitive >= 0.5 && < 0.7,
    unique >= 0 && < 0.1,
    unordered-containers >= 0.2 && < 0.3

  exposed-modules:
    Data.Propagator
    Data.Propagator.Cell
    Data.Propagator.Class
    Data.Propagator.Name
    Data.Propagator.Num
    Data.Propagator.Prop
    Data.Propagator.Supported

  ghc-options: -Wall -fwarn-tabs

  hs-source-dirs: src
  default-language: Haskell2010